# Harrax

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: basic.fragment  basic.vertex
src/: Config.h  Main.cpp
src/app/: App.cpp  App.hpp  Event.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
src/game/: Components.hpp  Entity.cpp  Entity.hpp  Particles.hpp  Registration.hpp  Registry.hpp  System.hpp
src/graphics/: Camera.hpp  Renderer.cpp  Renderer.hpp
src/maths/: Algebra.hpp
src/util/: DynamicPool.hpp  Error.hpp  File.hpp  Log.h  Random.cpp  Random.hpp  Time.cpp  Time.hpp
